# amplitude

./: .qmlls.ini  AGENTS.md  Cargo.toml  README  README.md  biome.json  build.rs  components.json  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
qml/: main.qml
src/: App.css  App.tsx  config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bus.rs  channels.rs  config.rs  lib.rs  main.rs
src-tauri/src/audio/: backend.rs  link.rs  mod.rs  node.rs  sink.rs
src-tauri/src/backend/: coreaudio.rs  pipewire.rs
src-tauri/src/commands/: bus.rs  channel.rs  mod.rs  nodes.rs
src-tauri/src/core/: bus.rs  channels.rs  config.rs  engine.rs  mod.rs  state.rs
src/audio/: audio_manager.rs  backend.rs  bus.rs  channel.rs  channel_manager.rs  channels.rs  client.rs  events.rs  manager.rs  mod.rs  nodes.rs
src/components/: component-example.tsx  example.tsx
src/components/mixer/: add-channel-modal.tsx  app-picker.tsx  channel-icon.tsx  channel-strip.tsx  master-output.tsx  meter.tsx  mixer-app.tsx  types.ts
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  (+5 more)
src/core/: app.rs  config.rs  icon.rs  mod.rs  modal.rs
src/hooks/: use-subscription.tsx
src/lib/: tauri-api.ts  types.ts
src/pipewire/: mod.rs  pw_core.rs  pw_node.rs  pw_registry.rs  pw_sink.rs
src/platform/: coreaudio.rs  mod.rs  pipewire.rs
src/ui/: application.rs  mod.rs  style.css
