[package]
name = "amplitude"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.3"
dirs = "6.0.0"
gtk4 = "0.10.3"
pipewire = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
spdlog-rs = "0.5.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
