[package]
name = "amplitude"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
futures = "0.3"
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
lucide-icons = { version = "0.562.0", features= ["iced"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
log = "0.4.29"
env_logger = "0.11.8"

[target.'cfg(target_os = "linux")'.dependencies]
pw = { version = "0.9.2", package = "pipewire" }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.13.0"
